fix: swagger test
