# docs/swagger.json
@@ -3,22 +3,56 @@
     "info": {
         "description": "This is a sample server Petstore server.",
         "title": "Swagger Example API",
-        "termsOfService": "http://swagger.io/terms/",
-        "contact": {
-            "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
-        },
+        "contact": {},
         "license": {
             "name": "Apache 2.0",
             "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
         },
         "version": "1.0"
     },
-    "host": "petstore.swagger.io",
-    "basePath": "/v2",
+    "host": "127.0.0.1:8000",
     "paths": {
-        "/user/:id": {
+        "/users": {
+            "post": {
+                "description": "save user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "addUser",
+                "parameters": [
+                    {
+                        "description": "user info object",
+                        "name": "userinfo",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/user.User"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/:id": {
             "get": {
                 "description": "get user info",
                 "consumes": [
@@ -30,13 +64,13 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "user info",
+                "summary": "getUserById",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Authentication header",
-                        "name": "Authorization",
-                        "in": "header",
+                        "type": "number",
+                        "description": "user ID",
+                        "name": "id",
+                        "in": "path",
                         "required": true
                     }
                 ],
